--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -1,8 +1,9 @@
 <main class="contenedor">
 
   <div class="container-fluid d-flex justify-content-center">
-      <section>
-          <h1>Ingreso de productos a la pagina</h1>
+        <div>
+            <h2>Ingreso de productos a la pagina</h2>
+        </div>
           <form class="col-md-6" action="/products" enctype="multipart/form-data" method="post">
               <div class="form-group">
 
