Primera fase del desafio

--- a/views/partials/products.ejs
+++ b/views/partials/products.ejs
@@ -1,4 +1,4 @@
-<div class"cuerpo">
+<div class="cuerpo">
     <div class="contenedor">
         <h1>Productos agregados</h1>
         <% products.forEach(product=> { %>
