--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,10 +22,10 @@
 
         <div class="container-fluid d-flex justify-content-center">
             <section>
-                <form action="">
+                <form action="/login" method="post">
                     <h1>Ingresa tu nombre de usuario</h1>
-                    <input type="name" class="form-control" name="username" placeholder="Usuario">
-                    <button type="submit" class="btn btn-primary botoncito" id="addUser" value="Log In">Iniciar sesion</button>
+                    <input type="name" name="nombre" class="form-control" placeholder="Usuario">
+                    <button type="submit" class="btn btn-primary botoncito" id="addUser" >Iniciar sesion</button>
                 </form>
             </section>
         </div>
