--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -1,10 +1,20 @@
 <main class="contenedor">
 
+
+
+
   <div class="container-fluid d-flex justify-content-center">
-        <div>
-            <h2>Ingreso de productos a la pagina</h2>
-        </div>
-          <form class="col-md-6" action="/products" enctype="multipart/form-data" method="post">
+
+<div class="contenedor">
+        <h1>Bienvenido <%= nombre%></h1>
+        <a href="/login">Logout</a>
+</div>
+</div>
+
+
+
+      <form class="col-md-6" action="/products" enctype="multipart/form-data" method="post">
+              <h1>Ingreso de productos a la pagina</h1>
               <div class="form-group">
 
                   <label for="exampleInputEmail1">Ingresa tu producto acá</label>
