--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -6,8 +6,8 @@
   <div class="container-fluid d-flex justify-content-center">
 
 <div class="contenedor">
-        <h1>Bienvenido <%= nombre%></h1>
-        <a href="/login">Logout</a>
+        <h1>Bienvenido <%=nombre%></h1>
+        <a href="/logout" class="btn btn-primary botoncito">Logout</a>
 </div>
 </div>
 
